--- a/boyaki/amplify/backend/backend-config.json
+++ b/boyaki/amplify/backend/backend-config.json
@@ -35,5 +35,21 @@
       "type": "manual"
     }
   },
-  "function": {}
+  "function": {
+    "createPostAndTimeline": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "BoyakiGql",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ]
+        }
+      ]
+    }
+  }
 }
