Revert "5. Follow/Timeline機能の実装"

--- a/boyaki/amplify/backend/backend-config.json
+++ b/boyaki/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "boyaki39c7f4de": {
+    "boyaki26b12ef8": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -16,14 +16,10 @@
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authboyaki39c7f4de"
+              "userPoolId": "authboyaki26b12ef8"
             }
           },
-          "additionalAuthenticationProviders": [
-            {
-              "authenticationType": "AWS_IAM"
-            }
-          ]
+          "additionalAuthenticationProviders": []
         }
       }
     }
@@ -33,23 +29,6 @@
       "service": "amplifyhosting",
       "providerPlugin": "awscloudformation",
       "type": "manual"
-    }
-  },
-  "function": {
-    "createPostAndTimeline": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "api",
-          "resourceName": "BoyakiGql",
-          "attributes": [
-            "GraphQLAPIIdOutput",
-            "GraphQLAPIEndpointOutput"
-          ]
-        }
-      ]
     }
   }
 }
