--- a/boyaki/.gitignore
+++ b/boyaki/.gitignore
@@ -37,3 +37,5 @@ amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
+# https://docs.amplify.aws/cli/teams/shared
+amplify/team-provider-info.json
