--- a/boyaki/.graphqlconfig.yml
+++ b/boyaki/.graphqlconfig.yml
@@ -10,6 +10,9 @@ projects:
         codeGenTarget: javascript
         generatedFileName: ''
         docsFilePath: src/graphql
+        region: ap-northeast-1
+        apiId: null
+        maxDepth: 3
 extensions:
   amplify:
     version: 3
